# cyclist

./: Dockerfile  Dockerfile.ESOP2023  README.md  cyclist.opam  dune-project
src/generic/: automata.c  automata.hpp  buchi_soundness.c  dune  heighted_graph.c  heighted_graph.hpp  new_buchi_soundness.c  relational_soundness.c  soundcheck.ml  types.c
src/generic/test/: Makefile  main.cpp  soundness
src/seplog/: sl_v2.ml
tests/soundness/results/esop2023/: results.ods  sl-tests.plot
